[gd_scene load_steps=6 format=3 uid="uid://virtvvq7l5gn"]

[ext_resource type="Script" uid="uid://ccmwkae6lfev0" path="res://scripts/interfaces/stats_ui.gd" id="1_4fgku"]
[ext_resource type="FontFile" uid="uid://j52mkvcmiy4y" path="res://fonts/Pixellari.ttf" id="2_htpet"]

[sub_resource type="Animation" id="Animation_htpet"]
resource_name = "show"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("room_enter_label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.733333, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kqtdq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("room_enter_label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_568pu"]
_data = {
&"RESET": SubResource("Animation_kqtdq"),
&"show": SubResource("Animation_htpet")
}

[node name="stats_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4fgku")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 129.0
offset_bottom = 236.0

[node name="health_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "attack"

[node name="attack_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "attack"

[node name="crit_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "attack"

[node name="gold_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "attack"

[node name="room_enter_label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 249.0
offset_top = 41.0
offset_right = 625.0
offset_bottom = 171.0
pivot_offset = Vector2(167, 45)
theme_override_fonts/font = ExtResource("2_htpet")
theme_override_font_sizes/font_size = 64
text = "ROOM 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_568pu")
}
